@@ -163,7 +163,10 @@ typedef enum {
 	REQUEST_STEP_LAYOUT,
 	RESPONSE_STEP_LAYOUT,
 	REQUEST_JOB_REQUEUE,
-	
+	REQUEST_DAEMON_STATUS,
+	RESPONSE_SLURMD_STATUS,
+	RESPONSE_SLURMCTLD_STATUS,
+
 	REQUEST_LAUNCH_TASKS = 6001,
 	RESPONSE_LAUNCH_TASKS,
 	MESSAGE_TASK_EXIT,
