@@ -320,6 +320,9 @@ static int _unpack_file_bcast(file_bcast_msg_t ** msg_ptr , Buf buffer );
 static void _pack_trigger_msg(trigger_info_msg_t *msg , Buf buffer );
 static int  _unpack_trigger_msg(trigger_info_msg_t ** msg_ptr , Buf buffer );
 
+static void _pack_slurmd_status(slurmd_status_t *msg, Buf buffer);
+static int  _unpack_slurmd_status(slurmd_status_t **msg_ptr, Buf buffer);
+
 /* pack_header
  * packs a slurm protocol header that proceeds every slurm message
  * IN header - the header structure to pack
@@ -455,6 +458,7 @@ pack_msg(slurm_msg_t const *msg, Buf buffer)
 	case REQUEST_SHUTDOWN_IMMEDIATE:
 	case REQUEST_PING:
 	case REQUEST_CONTROL:
+	case REQUEST_DAEMON_STATUS:
 		/* Message contains no body/information */
 		break;
 	case REQUEST_SHUTDOWN:
@@ -674,7 +678,10 @@ pack_msg(slurm_msg_t const *msg, Buf buffer)
 	case RESPONSE_TRIGGER_GET:
 	case REQUEST_TRIGGER_SET:
 	case REQUEST_TRIGGER_CLEAR:
-	_pack_trigger_msg((trigger_info_msg_t *) msg->data, buffer);
+		_pack_trigger_msg((trigger_info_msg_t *) msg->data, buffer);
+		break;
+	case RESPONSE_SLURMD_STATUS:
+		_pack_slurmd_status((slurmd_status_t *) msg->data, buffer);
 		break;
 	default:
 		debug("No pack method for msg type %u", msg->msg_type);
@@ -752,6 +759,7 @@ unpack_msg(slurm_msg_t * msg, Buf buffer)
 	case REQUEST_SHUTDOWN_IMMEDIATE:
 	case REQUEST_PING:
 	case REQUEST_CONTROL:
+	case REQUEST_DAEMON_STATUS:
 		/* Message contains no body/information */
 		break;
 	case REQUEST_SHUTDOWN:
@@ -997,6 +1005,10 @@ unpack_msg(slurm_msg_t * msg, Buf buffer)
 	case REQUEST_TRIGGER_CLEAR:
 		rc = _unpack_trigger_msg((trigger_info_msg_t **) 
 					  &msg->data, buffer);
+		break;
+	case RESPONSE_SLURMD_STATUS:
+		rc = _unpack_slurmd_status((slurmd_status_t **)
+					&msg->data, buffer);
 		break;
 	default:
 		debug("No unpack method for msg type %u", msg->msg_type);
@@ -4192,13 +4204,56 @@ unpack_multi_core_data (multi_core_data_t **mc_ptr, Buf buffer)
 	return SLURM_ERROR;
 }
 
+static void _pack_slurmd_status(slurmd_status_t *msg, Buf buffer)
+{
+	xassert(msg);
+
+	pack_time(msg->booted, buffer);
+	pack_time(msg->last_slurmctld_msg, buffer);
+	pack16(msg->slurmd_debug, buffer);
+
+	packstr(msg->slurmd_logfile, buffer);
+	packstr(msg->job_list, buffer);
+	packstr(msg->version, buffer);
+}
+
+static int _unpack_slurmd_status(slurmd_status_t **msg_ptr, Buf buffer)
+{
+	uint16_t uint16_tmp;
+	slurmd_status_t *msg;
+
+	xassert(msg_ptr);
+
+	msg = xmalloc(sizeof(slurmd_status_t));
+
+	safe_unpack_time(&msg->booted, buffer);
+	safe_unpack_time(&msg->last_slurmctld_msg, buffer);
+	safe_unpack16(&msg->slurmd_debug, buffer);
+
+	safe_unpackstr_xmalloc(&msg->slurmd_logfile, &uint16_tmp, buffer);
+	safe_unpackstr_xmalloc(&msg->job_list, &uint16_tmp, buffer);
+	safe_unpackstr_xmalloc(&msg->version, &uint16_tmp, buffer);
+
+	*msg_ptr = msg;
+	return SLURM_SUCCESS;
+
+unpack_error:
+	xfree(msg->slurmd_logfile);
+	xfree(msg->job_list);
+	xfree(msg->version);
+	xfree(msg);
+	*msg_ptr = NULL;
+	return SLURM_ERROR;
+}
+
 /* template 
    void pack_ ( * msg , Buf buffer )
    {
    xassert ( msg != NULL );
 
    pack16( msg -> , buffer ) ;
-   pack32((uint32_t)msg -> , buffer ) ;
+   pack32( msg -> , buffer ) ;
+   pack_time( msg -> , buffer );
    packstr ( msg -> , buffer ) ;
    }
 
@@ -4213,7 +4268,8 @@ unpack_multi_core_data (multi_core_data_t **mc_ptr, Buf buffer)
    *msg_ptr = msg;
 
    safe_unpack16( & msg -> , buffer ) ;
-   safe_unpack32(& msg -> , buffer ) ;
+   safe_unpack32( & msg -> , buffer ) ;
+   safe_unpack_time ( & msg -> , buffer ) ;
    safe_unpackstr_xmalloc ( & msg -> x, & uint16_tmp , buffer ) ;
    return SLURM_SUCCESS;
 
